# ChangeLog for media-plugins/gst-plugins-pulse
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/ChangeLog,v 1.23 2009/11/10 16:13:03 tester Exp $

  10 Nov 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  Stable on amd64, bug #290343

  12 Sep 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-pulse-0.10.16.ebuild:
  New pulse elements don't work with pulseaudio 0.9.9

*gst-plugins-pulse-0.10.16 (07 Sep 2009)

  07 Sep 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-pulse-0.10.16.ebuild:
  Version bump

*gst-plugins-pulse-0.10.15 (23 Aug 2009)

  23 Aug 2009; Mart Raudsepp <leio@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild, +gst-plugins-pulse-0.10.15.ebuild:
  Version bump - complete rewrite/overhaul of pulsesink

  05 Aug 2009; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-pulse-0.9.7.ebuild, -gst-plugins-pulse-0.10.11.ebuild:
  Remove old

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild:
  sparc stable wrt #266986

  21 May 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking gst-plugins-pulse-0.10.14 ~ppc64 for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking gst-plugins-pulse-0.10.14 ~ppc for bug 266986

  14 May 2009; Markus Meier <maekke@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild:
  amd64 stable, bug #266986

  12 May 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild:
  stable x86, bug 266986

  03 May 2009; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-pulse-0.10.14.ebuild:
  Stable on alpha, bug #266986

*gst-plugins-pulse-0.10.14 (30 Mar 2009)

  30 Mar 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-pulse-0.10.14.ebuild:
  Version bump

*gst-plugins-pulse-0.10.11 (06 Dec 2008)

  06 Dec 2008; <ssuominen@gentoo.org> +gst-plugins-pulse-0.10.11.ebuild:
  Version bump.
