@@ -1,15 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-pulse/Attic/gst-plugins-pulse-0.10.15.ebuild,v 1.1 2009/08/23 07:10:30 leio Exp $
-
-inherit gst-plugins-good
-
-DESCRIPTION="GStreamer plugin for the PulseAudio sound server"
-KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE=""
-
-RDEPEND=">=media-sound/pulseaudio-0.9.8
-	>=media-libs/gstreamer-0.10.23
-	>=media-libs/gst-plugins-base-0.10.23"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
